--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,15 @@
-<h1>
-  {{title}}
-</h1>
+<h3 class="title">
+  Angular4 ngComponentOutlet: Cargando componentes dinamicamente
+</h3>
+
+<div class="tabs">
+  <ul>
+    <li class="is-active"><a (click)="changeComponent('Cine')">Cine</a></li>
+    <li><a (click)="changeComponent('Teatro')">Teatro</a></li>
+    <li><a (click)="changeComponent('Musica')">Música</a></li>
+  </ul>
+</div>
+
+<hr>
+
+<ng-container *ngComponentOutlet="component"></ng-container>
